# obsidian-vault

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  main.rs
src/cli/: append.rs  config.rs  create.rs  daily.rs  graph.rs  guide.rs  index.rs  links.rs  list.rs  mcp.rs  mod.rs  read.rs  schema.rs  search.rs  serde_helpers.rs  stats.rs  tags.rs
src/config/: mod.rs  paths.rs  update_check.rs
src/extract/: frontmatter.rs  mod.rs  patterns.rs
src/index/: link_index.rs  mod.rs  reader.rs  schema.rs  tokenizer.rs  writer.rs
src/mcp/: mod.rs  tools.rs
src/model/: frontmatter.rs  graph.rs  link.rs  mod.rs  note.rs  tag.rs
src/output/: fields.rs  human.rs  json.rs  mod.rs
src/search/: mod.rs  query.rs
src/service/: mod.rs
src/vault/: config.rs  mod.rs  scanner.rs
tests/: cli_tests.rs
tests/fixtures/sample_vault/.obsidian/: app.json
tests/fixtures/sample_vault/Clippings/: elasticsearch-guide.md  tdd-article.md
tests/fixtures/sample_vault/Daily/: 2024-01-15.md
tests/fixtures/sample_vault/People/: 김철수.md
tests/fixtures/sample_vault/Templates/: Person.md
tests/fixtures/sample_vault/Zettelkasten/: container-networking.md  docker.md  kubernetes-basics.md  yaml-with-author-body.md
