[package]
name = "obsidian-vault"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sokojh/obsidian-vault"
homepage = "https://github.com/sokojh/obsidian-vault"
keywords = ["obsidian", "cli", "vault", "zettelkasten", "knowledge-management"]
categories = ["command-line-utilities"]
description = "High-performance Obsidian vault CLI for terminal and AI integration"

[[bin]]
name = "ov"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Pattern matching
regex = "1"
lazy_static = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2"
dirs = "6"

# Hashing
blake3 = "1"

# Parallelism
rayon = "1.10"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Search
tantivy = "0.22"

# HTTP (update check)
ureq = { version = "2", features = ["json"] }


[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
